[gd_scene load_steps=4 format=2]

[ext_resource path="res://XY Drawing.gd" type="Script" id=1]
[ext_resource path="res://Default.png" type="Texture" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="XY Drawing" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -300.0
margin_right = 300.0
margin_bottom = 300.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.67
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Centre" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureHolder" type="Control" parent="Centre"]
modulate = Color( 1, 1, 1, 0.501961 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="Sprite" parent="Centre/TextureHolder"]
show_behind_parent = true
texture = ExtResource( 2 )

[connection signal="gui_input" from="." to="." method="_on_XY_Drawing_gui_input"]
[connection signal="mouse_entered" from="." to="." method="mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="mouse_exited"]
